tests/ui/attributes/nonterminal-expansion.stderr
error: expected one of `(`, `::`, or `=`, found `!`
  --> $DIR/nonterminal-expansion.rs:16:20
   |
LL | pass_nonterminal!(n!());
   |                    ^ expected one of `(`, `::`, or `=`

error: aborting due to 1 previous error

